--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 port=4000
 MONGODB_URI=mongodb+srv://hahaha:hehehe@cluster0.iuzeb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+BACKEND_URL=http://localhost:4000
+NODE_ENV=development
