--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "description": "",
   "dependencies": {
     "@types/dotenv": "^6.1.1",
+    "@types/http-errors": "^2.0.4",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http-errors": "^2.0.0",
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1"
   },
