--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ port=4000
 MONGODB_URI=mongodb+srv://hahaha:hehehe@cluster0.iuzeb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 BACKEND_URL=http://localhost:4000
 NODE_ENV=development
+
+FRONTEND_URL=http://localhost:3000
